# Progetto_PCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_test.cpp
Documentazione UML/: CamminoMinimo + Dijkstra.txt  Duale.txt  PolygonalMesh.txt  TriangolazioneDue.txt  TriangolazioneUno.txt  main.txt
PolygonalMesh/: Cell0DIcosaedro.csv  Cell0DOttaedro.csv  Cell0DTetraedro.csv  Cell1DIcosaedro.csv  Cell1DOttaedro.csv  Cell1DTetraedro.csv  Cell2DIcosaedro.csv  Cell2DOttaedro.csv  Cell2DTetraedro.csv  Cell3DIcosaedro.csv  Cell3DOttaedro.csv  Cell3DTetraedro.csv
src/: PolygonalMesh.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_progetto_pcs.cpp  test_progetto_pcs.hpp
